force-app/main/default/objects/Inquiry_hz__c/fields/Type_hz__c.field-meta.xml
<CustomField>
    <fullName>Type_hz__c</fullName>
    <label>Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>