force-app/main/default/objects/Inquiry_hz__c/fields/UnitsMax__c.field-meta.xml
<CustomField>
    <fullName>UnitsMax__c</fullName>
    <label>Units Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>