force-app/main/default/objects/Inquiry_hz__c/fields/UnitsMin__c.field-meta.xml
<CustomField>
    <fullName>UnitsMin__c</fullName>
    <label>Units Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>