force-app/main/default/objects/Inquiry_hz__c/fields/URL_from_Portal__c.field-meta.xml
<CustomField>
    <fullName>URL_from_Portal__c</fullName>
    <description>URL delivered by parsed message from portal via Front Desk</description>
    <label>URL from Portal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>