force-app/main/default/objects/Inquiry_hz__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ocean</fullName>
            </value>
            <value>
                <fullName>Marina</fullName>
            </value>
            <value>
                <fullName>Harbor</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Golf Course</fullName>
            </value>
            <value>
                <fullName>Park</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Courtyard</fullName>
            </value>
            <value>
                <fullName>Landscape</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>