force-app/main/default/objects/Inquiry_hz__c/fields/Waterfront_hz__c.field-meta.xml
<CustomField>
    <fullName>Waterfront_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waterfront</label>
    <type>Checkbox</type>
</CustomField>