force-app/main/default/objects/Inquiry_hz__c/fields/WaterView__c.field-meta.xml
<CustomField>
    <fullName>WaterView__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water View</label>
    <type>Checkbox</type>
</CustomField>