force-app/main/default/objects/Inquiry_hz__c/fields/WebsiteId__c.field-meta.xml
<CustomField>
    <fullName>WebsiteId__c</fullName>
    <description>Represents the Website ID</description>
    <label>Website ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>