force-app/main/default/objects/Inquiry_hz__c/fields/WebsiteMlsId__c.field-meta.xml
<CustomField>
    <fullName>WebsiteMlsId__c</fullName>
    <label>Website MLS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>