force-app/main/default/objects/Inquiry_hz__c/fields/WebsiteSearchId__c.field-meta.xml
<CustomField>
    <fullName>WebsiteSearchId__c</fullName>
    <externalId>true</externalId>
    <label>Website Search ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>