force-app/main/default/objects/Inquiry_hz__c/fields/WebsiteSearchType_hz__c.field-meta.xml
<CustomField>
    <fullName>WebsiteSearchType_hz__c</fullName>
    <label>Website Search Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mapped Search</fullName>
            </value>
            <value>
                <fullName>Draw Search</fullName>
            </value>
            <value>
                <fullName>Radius Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>