force-app/main/default/objects/Inquiry_hz__c/fields/WebsiteSearchUrl_hz__c.field-meta.xml
<CustomField>
    <fullName>WebsiteSearchUrl_hz__c</fullName>
    <label>Website Search URL</label>
    <type>Url</type>
</CustomField>