force-app/main/default/objects/Inquiry_hz__c/fields/Which_Property__c.field-meta.xml
<CustomField>
    <fullName>Which_Property__c</fullName>
    <label>Which Property?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>