force-app/main/default/objects/Inquiry_hz__c/fields/Would_Like_Mortgage_Advice__c.field-meta.xml
<CustomField>
    <fullName>Would_Like_Mortgage_Advice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would Like Mortgage Advice?</label>
    <type>Checkbox</type>
</CustomField>