force-app/main/default/objects/Inquiry_hz__c/fields/Would_Self_Build__c.field-meta.xml
<CustomField>
    <fullName>Would_Self_Build__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would Self Build</label>
    <type>Checkbox</type>
</CustomField>