force-app/main/default/objects/Inquiry_hz__c/fields/Yard_hz__c.field-meta.xml
<CustomField>
    <fullName>Yard_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yard</label>
    <type>Checkbox</type>
</CustomField>