force-app/main/default/objects/Inquiry_hz__c/recordTypes/Generic.recordType-meta.xml
<RecordType>
    <fullName>Generic</fullName>
    <active>true</active>
    <label>Inquiry</label>
</RecordType>