force-app/main/default/objects/Inquiry_hz__c/listViews/Just_My_Closed_Inquiries.listView-meta.xml
<ListView>
    <fullName>Just_My_Closed_Inquiries</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>PropertyType__c</columns>
    <columns>City_hz__c</columns>
    <columns>ListingPrice_hz_max__c</columns>
    <columns>TotalArea_hz_min__c</columns>
    <columns>Bedrooms_hz_min__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Won</value>
    </filters>
    <label>My Closed Inquiries</label>
</ListView>